--- a/index.html
+++ b/index.html
@@ -33,10 +33,44 @@
     </nav>
 
     <div class="icons">
-        <div class="fas fas-search" id="search-btn"></div>
-        <div class="fas fas-shopping-cart" id="cart-btn"></div>
-        <div class="fas fas-bars" id="menu-btn"></div>
+        <div class="fas fa-search" id="search-btn"></div>
+        <div class="fas fa-shopping-cart" id="cart-btn"></div>
+        <div class="fas fa-bars" id="menu-btn"></div>
     </div>
+
+    <div class="search-form">
+        <input type="search" id="search-box" placeholder="search here...">
+        <label for="search-box" class="fas fa-search"></label>
+    </div>
+
+<div class="cart-item-container">
+    <div class="cart-item">
+        <span class="fas-fa-times"></span>
+        <img src="images/cafe1.jpg" alt="">
+        <div class="content">
+            <h3>cart item 01</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <div class="cart-item">
+        <span class="fas-fa-times"></span>
+        <img src="images/cafe2.jpg" alt="">
+        <div class="content">
+            <h3>cart item 02</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <div class="cart-item">
+        <span class="fas-fa-times"></span>
+        <img src="images/cafe3.jpg" alt="">
+        <div class="content">
+            <h3>cart item 03</h3>
+            <div class="price">$15.99/-</div>
+        </div>
+    </div>
+    <a href="#" class="btn">checkout now</a>
+</div>
+
 </header>
  <!-- header section ends-->
 
