--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <label for="search-box" class="fas fa-search"></label>
     </div>
 
-<div class="cart-item-container">
+<div class="cart-items-container">
     <div class="cart-item">
         <span class="fas-fa-times"></span>
         <img src="images/cafe1.jpg" alt="">
