Img, styles, function, sections
se agregaron img, styles, function, sections

--- a/index.html
+++ b/index.html
@@ -74,6 +74,40 @@
 </header>
  <!-- header section ends-->
 
+ <!--home section starts-->
+
+<section class="home" id="home">
+    <div class="content">
+        <h3>fresh coffee in the morning</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luctus nisl nibh ut tortor. Vivamus mattis fermentum risus at porttitor. Donec pulvinar tincidunt turpis ac vestibulum. Cras va</p>
+        <a href="#" class="btn">gets yours now</a>
+    </div>
+</section>
+
+<!--home section ends-->
+
+<!--about section ends-->
+
+<section class="about" id="about">
+    <h1 class="heading"> <span>about</span> us </h1>
+
+    <div class="row">
+
+        <div class="image">
+            <img src="images/coffeimg.jpg" alt="">
+        </div>
+        
+        <div class="content">
+            <h3>what makes our coffee special?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luc</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luc</p>
+            <a href="#" class="btn">learn more</a>
+        </div>
+    </div>
+</section>
+
+<!--about section ends-->
+
 
 
     <!-- custom js file link-->
