--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="cart-items-container">
     <div class="cart-item">
-        <span class="fas-fa-times"></span>
+        <span class="fas fa-times"></span>
         <img src="images/cafe1.jpg" alt="">
         <div class="content">
             <h3>cart item 01</h3>
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div class="cart-item">
-        <span class="fas-fa-times"></span>
+        <span class="fas fa-times"></span>
         <img src="images/cafe2.jpg" alt="">
         <div class="content">
             <h3>cart item 02</h3>
@@ -61,7 +61,7 @@
         </div>
     </div>
     <div class="cart-item">
-        <span class="fas-fa-times"></span>
+        <span class="fas fa-times"></span>
         <img src="images/cafe3.jpg" alt="">
         <div class="content">
             <h3>cart item 03</h3>
