--- a/index.html
+++ b/index.html
@@ -108,6 +108,132 @@
 
 <!--about section ends-->
 
+<!-- menu section starts-->
+
+<section class="menu" id="menu">
+
+<h1 class="heading"> our <span>menu</span></h1>
+
+<div class="box-container">
+    <div class="box">
+        <img src="images/menu1.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+
+    <div class="box">
+        <img src="images/menu2.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+
+    <div class="box">
+        <img src="images/menu3.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+    
+    <div class="box">
+        <img src="images/menu4.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+
+    <div class="box">
+        <img src="images/menu5.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+
+    <div class="box">
+        <img src="images/menu6.jpg" alt="">
+        <h3>tasty and healthy</h3>
+        <div class="price">$15.99 <span>20.99</span></div>
+        <a href="#" class="btn">add to cart</a>
+    </div>
+</div>
+</section>
+
+
+<!-- menu section ends-->
+
+<section class="products" id="products">
+
+    <h1 class="heading"> our <span>products</span> </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="images/product1.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>fresh coffee</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="price">$15.99 <span>20.99</span></div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="images/product2.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>fresh coffee</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="price">$15.99 <span>20.99</span></div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="image">
+                <img src="images/product3.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>fresh coffee</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                <div class="price">$15.99 <span>20.99</span></div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
     <!-- custom js file link-->
