--- a/index.html
+++ b/index.html
@@ -118,42 +118,42 @@
     <div class="box">
         <img src="images/menu1.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
 
     <div class="box">
         <img src="images/menu2.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
 
     <div class="box">
         <img src="images/menu3.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
     
     <div class="box">
         <img src="images/menu4.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
 
     <div class="box">
         <img src="images/menu5.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
 
     <div class="box">
         <img src="images/menu6.jpg" alt="">
         <h3>tasty and healthy</h3>
-        <div class="price">$15.99 <span>20.99</span></div>
+        <div class="price">$15.99 <span>$20.99</span></div>
         <a href="#" class="btn">add to cart</a>
     </div>
 </div>
@@ -185,7 +185,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="price">$15.99 <span>20.99</span></div>
+                <div class="price">$15.99 <span>$20.99</span></div>
             </div>
         </div>
 
@@ -207,7 +207,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="price">$15.99 <span>20.99</span></div>
+                <div class="price">$15.99 <span>$20.99</span></div>
             </div>
         </div>
 
@@ -229,11 +229,26 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star-half-alt"></i>
                 </div>
-                <div class="price">$15.99 <span>20.99</span></div>
+                <div class="price">$15.99 <span>$20.99</span></div>
             </div>
         </div>
     </div>
 </section>
+
+<!-- review section ends-->
+
+<section class="review" id="review">
+
+    <h1 class="heading"> customer's <span>review</span></h1>
+
+    <div class="box-container">
+        
+    </div>
+
+
+</section>
+
+<!-- review section ends-->
 
 
     <!-- custom js file link-->
