--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="images/coffeimg.jpg" alt="">
+            <img src="images/coffe.jpg" alt="">
         </div>
         
         <div class="content">
@@ -333,21 +333,80 @@
     <div class="box-container">
         <div class="box">
             <div class="image">
-                <img src="" alt="">
+                <img src="images/blog1.jpeg" alt="">
             </div>
             <div class="content">
-                <a href="" class="title">tasty and refreshing coffee</a>
+                <a href="#" class="title">tasty and refreshing coffee</a>
                 <span>by admin/ 29th december,2024</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luctus nisl nibh ut tortor. </p>
                 <a href="" class="btn">read more</a>
             </div>
         </div>
 
+        <div class="box">
+            <div class="image">
+                <img src="images/blog2.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin/ 29th december,2024</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luctus nisl nibh ut tortor. </p>
+                <a href="" class="btn">read more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog3.jpg" alt="">
+            </div>
+            <div class="content">
+                <a href="#" class="title">tasty and refreshing coffee</a>
+                <span>by admin/ 29th december,2024</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, nulla ac euismod accumsan, massa lacus blandit arcu, in luctus nisl nibh ut tortor. </p>
+                <a href="" class="btn">read more</a>
+            </div>
+        </div>
+ 
 
     </div>
 </section>
 
 <!-- blogs section ends-->
+
+<!-- footer section starts-->
+
+<section class="footer">
+
+    <div class="share">
+        <a href="#" class="fab fa-facebook-f"></a>
+        <a href="#" class="fab fa-x"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+    </div>
+
+    <div class="links">
+        <a href="#">home</a>
+        <a href="#">about</a>
+        <a href="#">menu</a>
+        <a href="#">products</a>
+        <a href="#">review</a>
+        <a href="#">contact</a>
+        <a href="#">blogs</a>
+    </div>
+
+    <div class="credit">created by <span>VIRIT.web designer</span> | all rights reserved</div>
+</section>
+
+
+
+
+
+
+
+
+
+<!-- footer section ends-->
 
 
     <!-- custom js file link-->
